# selfsolver-backend

./: .coveragerc  .env.example  .flake8  .pre-commit-config.yaml  Procfile  README.md  pyproject.toml  pytest.ini
selfsolver/: .models.py.swp  __init__.py  app.py  app_factory.py  config.py  models.py  password.py  schemas.py
selfsolver/blueprints/: __init__.py  auth.py  enduser.py
selfsolver/commands/: __init__.py  company.py  create_user.py  database.py  defect.py  secret.py  seed.py  user.py
tests/: __init__.py  conftest.py  factories.py  test_auth_routes.py  test_commands.py  test_config.py  test_models.py  test_password.py  test_selfsolver.py
tests/models/: test_brand_model.py  test_company_model.py  test_device_model.py  test_family_model.py  test_location_model.py  test_relationships.py  test_required_columns.py  test_ticket_model.py  test_user_model.py
