[tool.poetry]
name = "selfsolver"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
generate-secret = "selfsolver.utils:generate_secret"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
python-dotenv = "^0.14.0"
Flask-SQLAlchemy = "^2.4.4"
psycopg2-binary = "^2.8.6"
passlib = "^1.7.4"
argon2-cffi = "^20.1.0"
Flask-JWT-Extended = "^3.24.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
