[tool.poetry]
name = "selfsolver"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
python-dotenv = "^0.14.0"
Flask-SQLAlchemy = "^2.4.4"
psycopg2-binary = "^2.8.6"
passlib = "^1.7.4"
argon2-cffi = "^20.1.0"
Flask-JWT-Extended = "^3.24.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
pre-commit = "^2.7.1"
flake8-docstrings = "^1.5.0"
pep8-naming = "^0.11.1"
flake8-comprehensions = "^3.2.3"
flake8-pytest-style = "^1.3.0"
pytest-cov = "^2.10.1"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
